2005-04-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/old-news.html (href): Fix link.

2005-04-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/install/index.html: Fix officciallogo, use strong iso bold.

	* site/install/older-versions.html: New file.  Retrieve from
	google cache.

	* site/about/faq.html (href): Fix link to big tutorial.

	* site: More /download link fixes.

2005-04-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/switch/index.html: fix link. 


	* site/switch/advantages.html: typos.

	* site/images/baer-ledger.png: add comment

2005-04-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/about/browser-language.html: Fix link.

2005-03-31  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/install: New directory (WAS: download).  Update all links.
	This enables toplevel lilypond.org transition.

	* site/about/features.html: Fix rosegarden link.  Add close tags,
	indent-region.

2005-03-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/download/windows.html: Reword Windows problem a bit after
	reading a newsgroup post.

2005-03-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/check-translation.py: Actually add.

2005-03-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/devel/packaging.html: Indent region.  Update.  Fix Debian
	and Fedora (previously: Red Hat) build instructions.

	* site/about/thanks.html (href): 
	* site/about/screenshots.html (href): 
	* site/about/faq.html (Han-Wen): Update documentation links to v2.4.

	* site/devel/index.html: Indent region.  Add CVS information.  Do
	not use "here" for link names.

2005-03-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/devel/index.html: update INSTALL links.

2005-03-23  Graham Percival  <gperlist@shaw.ca>

	* site/switch/tour.html: removed link to Erich
	Rickheit's page.

2005-03-23  Matthias Kilian  <kili@outback.escape.de>

	* site/about/automated-engraving/benchmarking.html,
	* site/about/automated-engraving/engraving.html,